--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,14 @@
- name: Deploy Website
-   on:
-     push:
-       branches: [ main ]
-   jobs:
-     deploy:
-       runs-on: ubuntu-latest
-       steps:
-         - name: Deploy via SSH
-           uses: appleboy/ssh-action@v0.1.7
-           with:
-             host: ${{ secrets.HOST_IP }}
-             port: ${{ secrets.SSH_PORT }}
-             username: deploy
-             key: ${{ secrets.DEPLOY_KEY }}
-             script: |
-               cd /var/www/wyn.jefahnierocks.com
-               git pull
+name: Deploy Wyn's MyFort Site
+
+on:
+  push:
+    branches: [main]
+
+jobs:
+  deploy:
+    uses: verlyn13/kids-deploy-actions/.github/workflows/deploy.yml@main
+    with:
+      build_command: 'npm install && npm run build'   # now has a robust build
+      build_output_dir: 'dist'                         # deploy built files from 'dist'
+      remote_target_dir: '/var/www/kidsites/wyn'      # target directory on the server
+    secrets: inherit
